Bugfix grid align-stretch

--- a/src/component/grid/style.scss
+++ b/src/component/grid/style.scss
@@ -87,7 +87,7 @@
   &.align-flex-end {
     align-items: flex-end;
   }
-  &.align-flex-end {
+  &.align-stretch {
     align-items: stretch;
   }
 
@@ -122,7 +122,7 @@
     &.align-flex-end {
       align-self: flex-end;
     }
-    &.align-flex-end {
+    &.align-stretch {
       align-self: stretch;
     }
   }
